--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>May 01, 2024</summary>
+                    Updated IDs 362, 392, 379.
+                    Removed IDs 301, 353.
+                </details>
+                <details>
                     <summary>April 30, 2024</summary>
                     Updated IDs 207, 223, 292.
                     Removed IDs 238, 258.
