--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,19 +31,19 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary>May 01, 2024</summary>
-                    Updated IDs 362, 392, 379.
+                    <summary>May 02, 2024</summary>
+                    Updated IDs 362, 392, 379, 415, 456, 476.<br>
                     Removed IDs 301, 353.
                 </details>
                 <details>
                     <summary>April 30, 2024</summary>
-                    Updated IDs 207, 223, 292.
+                    Updated IDs 207, 223, 292.<br>
                     Removed IDs 238, 258.
                 </details>
                 <details>
                     <summary>April 29, 2024</summary>
-                    Updated IDs 1, 3, 5, 7, 98, 26, 28, 31, 147, 150.
-                    Removed IDs 464, 97.
+                    Updated IDs 1, 3, 5, 7, 98, 26, 28, 31, 147, 150.<br>
+                    Removed IDs 464, 97.<br>
                     Added tag MobileArmor.
                 </details>
                 <details>
