--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated ID 18.
+                </details>
+                <details>
                     <summary>May 02, 2024</summary>
                     Updated IDs 362, 392, 379, 415, 456, 476.<br>
                     Removed IDs 301, 353.
