--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,7 +31,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>May 06, 2024</summary>
                     Updated ID 18.
                 </details>
                 <details>
