--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Added ID 97.<br>
+                    Updated IDs 19, 64.
+                </details>
+                <details>
                     <summary>May 06, 2024</summary>
                     Updated ID 18.
                 </details>
