--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -8,10 +8,11 @@
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
         <h2><include key="0 description"></include></h2>
 
-        <section id="downloads">    <!-- wide window mode -->
+        <!-- wide window mode -->
+        <section id="downloads">
             <a href="/GFL" class="btn-gfl"><span></span>Girls' Frontline</a>
             <a href="/PNC" class="btn-pnc"><span></span>Neural Cloud</a>
-            <a href="/EXI" class="btn-exi"><span></span>Exilium</a>
+            <!-- <a href="/EXI" class="btn-exi"><span></span>Exilium</a> -->
         </section>
 
         <!-- narrow window mode -->
