--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,9 +31,9 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>May 15, 2024</summary>
                     Added ID 97.<br>
-                    Updated IDs 19, 64.
+                    Updated IDs 19, 64, 512.
                 </details>
                 <details>
                     <summary>May 06, 2024</summary>
