--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -29,7 +29,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Stats comparison and algo builder"></include>
+        <include src="/univasset/scripts/pageheader/header.html" description="Stats comparison and algo builder"></include>
 
         <div class="container">
             <section id="main_content">
