--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -33,7 +33,7 @@
                 <details>
                     <summary>May 15, 2024</summary>
                     Added ID 97.<br>
-                    Updated IDs 19, 64, 512.
+                    Updated IDs 19, 23, 64, 512.
                 </details>
                 <details>
                     <summary>May 06, 2024</summary>
