--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Apparently this is a necessity"></include>
+        <include src="/univasset/scripts/pageheader/header.html" description="Apparently this is a necessity"></include>
 
         <div class="container">
             <section id="main_content">
