--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -16,6 +16,7 @@
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ["Updated Function Catalog", "https://docs.google.com/spreadsheets/d/1M_sY0NcafkExgj2VTLSCY-2k9xkCA4rTXUXWHrykhdQ"],
+                ["Sheathed Edge Missions", "https://docs.google.com/spreadsheets/d/100xEqM_5KK80Xgnd_9CZbz_Z4ToNqzH9xYMTkxAR9KQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
