--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -42,6 +42,8 @@
                     </table>
                 </div>
 
+                <!-- fairies -->
+
                 <details id="filter">
                     <summary>Filter</summary>
 
@@ -90,6 +92,7 @@
 
                 <p>Click on the stat names to sort the units.</p>
                 <p>Click on the unit's name to open the algorithm window.</p>
+                <p>This page uses cookies to save algorithm settings.</p>   <!-- change to floating dialog -->
                 <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
             </section>
         </div>
@@ -122,5 +125,3 @@
         <form method="dialog"></form>
     </dialog>
 </html>
-
-<!-- this page uses cookies for saving personal settings -->
