--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>June 06, 2024</summary>
+                    Added IDs 238, 258.<br>
+                    Updated ID 236.
+                </details>
+                <details>
                     <summary>May 15, 2024</summary>
                     Added ID 97.<br>
                     Updated IDs 19, 23, 64, 512.
