--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -94,6 +94,7 @@
                 <p>Click on the unit's name to open the algorithm window.</p>
                 <p>This page uses cookies to save algorithm settings.</p>   <!-- change to floating dialog -->
                 <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
+                <p>Arma, class, and algorithm sprites taken from <a href="https://drive.google.com/drive/folders/1P9T2eJVCG3X5ctaiyBK61T0rNS6uXJJR">Ferrari's compilation</a>.</p>
             </section>
         </div>
     </body>
