--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Welcome to the Main Page"></include>
+        <include src="/univasset/scripts/pageheader/header.html" description="Welcome to the Main Page"></include>
 
         <div class="container">
             <section id="main_content">
