--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -10,19 +10,20 @@
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
+                ["Comprehensive Spirits Guide (CSG)", "https://docs.google.com/document/d/1hPwNc-I7stGQxEK_BgrxBEc4Y_dmL7jM2K_bB-M2J0E"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ["PNC Search Terminal Lv5 Results", "https://docs.google.com/spreadsheets/d/1rF4aIT7GPS70euG4Zbbeib3pSidiKZVhFgpHWjDVC6I"],
                 ["Translated Tier List of 冰川星河", "https://docs.google.com/spreadsheets/d/1kuhW16wnGL4BkRf31_6mznsx02f8tI2KqSGCNYt2INM"],
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ["Updated Function Catalog", "https://docs.google.com/spreadsheets/d/1M_sY0NcafkExgj2VTLSCY-2k9xkCA4rTXUXWHrykhdQ"],
+                ["Algorithms and Spirits", 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
                 ["Sheathed Edge Missions", "https://docs.google.com/spreadsheets/d/100xEqM_5KK80Xgnd_9CZbz_Z4ToNqzH9xYMTkxAR9KQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ["PNC Calculator", "https://docs.google.com/spreadsheets/d/1_b9E22dIP526Axn4rUSBfLBKvQj7K1jB7iMfSiQBOdI"],
                 ["Just Abigail", "https://docs.google.com/spreadsheets/d/1Qekx9EWUwDWijVBbZBMcZBLPPE49jUmng3nX_oQ0ZEw"],
-                ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             ))
         </script>
 
