--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./index.css">
         <link rel="stylesheet" href="./algorithms.css">
+        <link rel="stylesheet" href="./fairies.css">
         
         <!-- Setup theme-color -->
 
@@ -42,12 +43,35 @@
                     </table>
                 </div>
 
-                <!-- <button type="button"> -->
-                    <!-- <span>Open Spirit Window</span>  Change to Close Fairy Window on open -->
-                    <!-- <dialog></dialog>               Null + All Fairies -->
-                <!-- </button> -->
-                <!-- base attributes at max level -->
-                <!-- fairy skills later -->
+                <details id="team">
+                    <summary>Team Bonus</summary>
+
+                    <div id="spirits">
+                        <button type="button">
+                            <img src="../assets/images/spirits/Faith.png" alt="Faith">
+                        </button>
+                        <dialog>
+                            <form method="dialog">
+                                <button type="submit" value="Faith">
+                                    <img src="../assets/images/spirits/Faith.png" alt="Faith">
+                                    <div>Faith</div>
+                                </button>
+                                <button type="submit" value="Hope">
+                                    <img src="../assets/images/spirits/Hope.png" alt="Hope">
+                                    <div>Hope</div>
+                                </button>
+                                <button type="submit" value="Love">
+                                    <img src="../assets/images/spirits/Love.png" alt="Love">
+                                    <div>Love</div>
+                                </button>
+                                <button type="submit" value="Reverence">
+                                    <img src="../assets/images/spirits/Reverence.png" alt="Reverence">
+                                    <div>Reverence</div>
+                                </button>
+                            </form>
+                        </dialog>
+                    </div>
+                </details>
 
                 <details id="filter">
                     <summary>Filter</summary>
@@ -87,7 +111,7 @@
                     <label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta<span class="tooltiptext">Arma stats at Lv.30.</span></label>
                     <label class="tooltip"><input type="checkbox" value="Algo" />Algorithm<span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span></label>
                     <label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training<span class="tooltiptext">Specialty at Lv.543.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Sprt" disabled />Holy Spirits<span class="tooltiptext"></span></label>
+                    <label class="tooltip"><input type="checkbox" value="Sprt" />Holy Spirits<span class="tooltiptext"></span>Spirits at Lv.50.</label>
                 </div>
 
                 <!-- battle bonus -->
@@ -95,12 +119,14 @@
                 <!-- Functions -->
                 <!-- Protocols -->
                 <!-- algo 3set -->
+                <!-- fairy skills -->
 
                 <p>Click on the stat names to sort the units.</p>
                 <p>Click on the unit's name to open the algorithm window.</p>
                 <p>This page uses cookies to save algorithm settings.</p>   <!-- change to floating dialog -->
                 <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 <p>Arma, class, and algorithm sprites taken from <a href="https://drive.google.com/drive/folders/1P9T2eJVCG3X5ctaiyBK61T0rNS6uXJJR">Ferrari's compilation</a>.</p>
+                <!-- fairy stats from takeshi doc -->
             </section>
         </div>
     </body>
