--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>June 23, 2024</summary>
+                    Added IDs 301, 353.<br>
+                    Updated "starter guide".
+                </details>
+                <details>
                     <summary>June 06, 2024</summary>
                     Added IDs 238, 258.<br>
                     Updated ID 236.
