--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -6,7 +6,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="/main.css">
         
         <!-- Setup theme-color -->
 
@@ -52,7 +52,7 @@
                     <dd>There is no stamina. But it has a rough equivalent in Manpower, Ammunition, Ration, and Part resources, which can be gathered in bulk indefinitely.</dd>
 
                     <dt>Storage</dt>
-                    <dd>Android ahould be around 5-6GB, iOS is around 10GB.</dd>
+                    <dd>Android and iOS should be around 10GB.</dd>
 
                     <dt>Longetivity</dt>
                     <dd>This game will only ever end once they've told all the stories they want to tell. Which is still a lot as of now.</dd>
@@ -200,11 +200,11 @@
 
                 <a href="#focus" id="focus"><h1>What should I focus on as a beginner?</h1></a>
                 <ul>
-                    <li>2 ARSMG for general content (Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion), 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
+                    <li>2 ARSMG for general content (Common first team is M4A1, ST AR-15, M4 SOPMOD II, UMP45, Skorpion), 1 PA/coalition team, 2 RFHG for late-game, and 1 MGSG for specialized enemies</li>
                     <li>8 echelons, where 4 are in permanent logistics</li>
                     <li>Forward Basecamp for passive CR and core income</li>
                     <li>3-4 additional dorms for battery generation</li>
-                    <li>Intelligence Center for generating chips which will be the bottleneck for fully maxed HOCS</li>
+                    <!-- <li>Intelligence Center for generating chips which will be the bottleneck for fully maxed HOCS</li> -->
                     <li>Protocol Control Centre for the newbie-friendly units</li>
                 </ul>
             </section>
