--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -127,9 +127,9 @@
         <div id="algo-field" class="tab-group">
             <!-- change label styling (h2) to something more fitting -->
             <div class="tab-button">
-                <label><input type="radio" name="algorithm" value="Offense" checked/><h2>Offense</h2></label>
-                <label><input type="radio" name="algorithm" value="Stability" /><h2>Stability</h2></label>
-                <label><input type="radio" name="algorithm" value="Special" /><h2>Special</h2></label>
+                <label><input type="radio" name="algorithm" value="Offense" checked/>Offense</label>
+                <label><input type="radio" name="algorithm" value="Stability" />Stability</label>
+                <label><input type="radio" name="algorithm" value="Special" />Special</label>
             </div>
 
             <div class="tab-body" id="Offense"></div>
