--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -33,6 +33,7 @@
                 <details>
                     <summary>June 23, 2024</summary>
                     Added IDs 301, 353.<br>
+                    Updated ID 462.<br>
                     Updated "starter guide".
                 </details>
                 <details>
