--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -125,7 +125,6 @@
         <!-- <div id="help" data-tooltip="Click outside to close the dialog window."></div> -->
 
         <div id="algo-field" class="tab-group">
-            <!-- change label styling (h2) to something more fitting -->
             <div class="tab-button">
                 <label><input type="radio" name="algorithm" value="Offense" checked/>Offense</label>
                 <label><input type="radio" name="algorithm" value="Stability" />Stability</label>
@@ -159,7 +158,7 @@
     </dialog>
 </html>
 
-<template id="spirits-template">    <!-- test: check if template is readable outside html tag -->
+<template id="spirits-template">    <!-- test: check if template is readable outside html tag ~ ok -->
     <button type="submit" value="">
         <img src="" alt="">
         <span></span>
