--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -14,6 +14,7 @@
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ["PNC Search Terminal Lv5 Results", "https://docs.google.com/spreadsheets/d/1rF4aIT7GPS70euG4Zbbeib3pSidiKZVhFgpHWjDVC6I"],
                 ["Translated Tier List of 冰川星河", "https://docs.google.com/spreadsheets/d/1kuhW16wnGL4BkRf31_6mznsx02f8tI2KqSGCNYt2INM"],
+                ["Algo Data Mastersheet - Gamma", "https://docs.google.com/spreadsheets/d/1fWVRmTDjlgGfs2zS1cG5fjPH1Eedx1pVY6jLYKCn1Wo"],
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ["Updated Function Catalog", "https://docs.google.com/spreadsheets/d/1M_sY0NcafkExgj2VTLSCY-2k9xkCA4rTXUXWHrykhdQ"],
