--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>June 30, 2024</summary>
+                    Updated IDs 14, 450.
+                </details>
+                <details>
                     <summary>June 23, 2024</summary>
                     Added IDs 301, 353.<br>
                     Updated ID 462.<br>
