--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -9,6 +9,7 @@
             document.querySelector("#main_content div").replaceWith(Embed.google(
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
+                ["Neural Cloud: Clukay Banner Type Calculator", "https://docs.google.com/spreadsheets/d/1w5gOllmzkKbC4nwgN1xpZrT8TXuoG5d0O9OLKCI7GrY"]
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
                 ["Comprehensive Spirits Guide (CSG)", "https://docs.google.com/document/d/1hPwNc-I7stGQxEK_BgrxBEc4Y_dmL7jM2K_bB-M2J0E"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
