--- a/EXI/index.html
+++ b/EXI/index.html
@@ -17,7 +17,7 @@
         <!-- end theme color meta headers -->
 
         <!-- Cloudflare Web Analytics -->
-        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "20de2f0b325f45c89012eb57982e3e29"}'></script>
+        <!-- <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "20de2f0b325f45c89012eb57982e3e29"}'></script> -->
         <!-- End Cloudflare Web Analytics -->
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
