--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -33,9 +33,11 @@
                 <input type="submit" />
             </form>
     
-            <div id="cards-field"></div>
+            <form id="cards-field"></form>
         </section>
     </div>
+
+    <!-- id submit / fixed -->
 </body>
 
 <template id="query-tag">
@@ -49,6 +51,7 @@
 <template id="faq-card">
     <fieldset>
         <legend>
+            <label><input type="checkbox" name=""></label>
             <!-- id button -->
             <h3></h3>
         </legend>
