--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -51,7 +51,7 @@
 <template id="faq-card">
     <fieldset>
         <legend>
-            <label><input type="checkbox" name=""></label>
+            <!-- <label><input type="checkbox" name=""></label> -->
             <!-- id button -->
             <h3></h3>
         </legend>
