--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -29,5 +29,5 @@
         <title>Exilium FAQs | Random Scraps</title>
     </head>
 
-    <include src="/univasset/scripts/faqs/test.html" subheader="Tabbing test" onreplace="queryFunc()" ></include>
+    <include src="/univasset/scripts/faqs/test.html" subheader="Cleaner Tag test" onreplace="queryFunc()" ></include>
 </html>
