--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -20,7 +20,6 @@
             
             <form id="Tags" class="tab-body">
                 <div></div>
-                <input type="text" name="tags" />
                 <input type="submit" />
             </form>
     
@@ -42,7 +41,7 @@
 
 <template id="query-tag">
     <label class="tags tooltip">
-        <input type="checkbox" />
+        <input type="checkbox" name="tag" />
         <span id="name"></span>
         <span class="tooltiptext"></span>
     </label>
@@ -51,8 +50,7 @@
 <template id="faq-card">
     <fieldset>
         <legend>
-            <!-- <label><input type="checkbox" name=""></label> -->
-            <!-- id button -->
+            <!-- <label><input type="checkbox"></label> -->
             <h3></h3>
         </legend>
         <span id="answer"></span>
