--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -9,8 +9,8 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/faqs/index.css">
-        <!-- <link rel="stylesheet" href="/univasset/scripts/faqs/test.css"> -->
+        <!-- <link rel="stylesheet" href="/univasset/scripts/faqs/index.css"> -->
+        <link rel="stylesheet" href="/univasset/scripts/faqs/test.css">
         
         <!-- Setup theme-color -->
 
@@ -29,5 +29,5 @@
         <title>Exilium FAQs | Random Scraps</title>
     </head>
 
-    <include src="/univasset/scripts/faqs/test.html" subheader="Cleaner Tag test" onreplace="queryFunc()" ></include>
+    <include src="/univasset/scripts/faqs/test.html" subheader="Cleaner Tag/Clickable Card test" onreplace="queryFunc()" ></include>
 </html>
