--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -50,8 +50,10 @@
 <template id="faq-card">
     <fieldset>
         <legend>
-            <!-- <label><input type="checkbox"></label> -->
-            <h3></h3>
+            <h3>
+                <label><input type="checkbox" name="id"></label>
+                &#41;&#32;
+            </h3>
         </legend>
         <span id="answer"></span>
         <hr>
