--- a/GFL/returner.html
+++ b/GFL/returner.html
@@ -6,7 +6,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="/main.css">
         
         <!-- Setup theme-color -->
 
@@ -41,7 +41,7 @@
 
                 <a href="#returning" id="returning"><h1>Should I come back to this game?</h1></a>
                 <p><del>Why did you leave in the first place?</del></p>
-                <p>If you only care about the story there's a <a href="https://xxx-yyy-xxx.github.io/GFL/faqs?id=00023">selection of materials</a> to choose from.</p>
+                <p>If you only care about the story there's a <a href="https://xxx-yyy-xxx.github.io/GFL/faqs/?id=23">selection of materials</a> to choose from.</p>
                 <p>Everything else, please see <a href="https://xxx-yyy-xxx.github.io/GFL/starter#guide">the guides</a>.</p>
 
             </section>
