--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -32,11 +32,11 @@
                 <input type="submit" />
             </form>
     
-            <form id="cards-field"></form>
+            <form id="Cards">
+                <input type="submit" />
+            </form>
         </section>
     </div>
-
-    <!-- id submit / fixed -->
 </body>
 
 <template id="query-tag">
@@ -51,8 +51,7 @@
     <fieldset>
         <legend>
             <h3>
-                <label><input type="checkbox" name="id"></label>
-                &#41;&#32;
+                <label><input type="checkbox" name="id"></label>&#41;&#32;
             </h3>
         </legend>
         <span id="answer"></span>
